# runcpp2

./: .gitignore  .gitmodules  Build.bat  Build.sh  CMakeLists.txt  Jenkinsfile  ORIGINAL_LICENSE  README.md  Release.sh  Runcpp2Logo.psd  TODO.md  index.html  iwyu.sh  versions.json
0.0.0/: 404.html  index.html  sitemap.xml
0.0.0/search/: search_index.json
0.0.0/test/: index.html
0.0.1/: 404.html  index.html  sitemap.xml
0.0.1/search/: search_index.json
0.0.1/test/: index.html
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/build_settings/: index.html
0.2.0/guides/basic_concepts/: index.html
0.2.0/guides/building_project_sources/: index.html
0.2.0/guides/external_dependencies/: index.html
0.2.0/guides/scriptable_pipeline/: index.html
0.2.0/program_manual/: index.html
0.2.0/user_config/: index.html
CI/: RunAllTests.bat  RunAllTests.sh  runcpp2Artifacts.gocd.yaml  runcpp2Main.gocd.yaml  runcpp2MainTrigger.gocd.yaml  runcpp2PR_Trigger.gocd.yaml
DefaultYAMLs/: CompilerProfilesSchema.json  DefaultCompilerProfiles.yaml  DefaultScriptDependencies.yaml  DefaultScriptInfo.yaml  DefaultUserConfig.yaml  OldScriptInfoSchema.json  OldUserConfigSchema.json  ScriptDependenciesSchema.json  ScriptInfoSchema.json  UserConfigSchema.json  g++.yaml
DefaultYAMLs/Default/: CommonFileTypes.yaml  g++.yaml  vs2022_v17+.yaml
Examples/: CivetwebStaticWebServer.cpp  ClearTutorial.sh  CppStaticWebServer.cpp  InteractiveTutorial.cpp  Logging.cpp  MatplotExample.cpp  SDLWindow.cpp  TestImport.yaml  index.html  test.cpp  testSDL.cpp  test_static.cpp
Examples/OtherSources/: AnotherSourceFileGcc.cpp  AnotherSourceFileGcc.hpp  AnotherSourceFileMSVC.hpp
Include/Tests/BuildsManager/: MockComponents.hpp
Include/Tests/ConfigParsing/: MockComponents.hpp
Include/Tests/IncludeManager/: MockComponents.hpp
Include/runcpp2/: BuildsManager.hpp  CompilerInfo.hpp  CompilerProfile.hpp  CompilerProfileHelper.hpp  CompilingLinking.hpp  ConfigParsing.hpp  DependenciesHelper.hpp  DependenciesSetupHelper.hpp  DependencyInfo.hpp  DependencyLibraryType.hpp  DependencySource.hpp  IncludeManager.hpp  LibYAML_Wrapper.hpp  ParseUtil.hpp  PipelineSteps.hpp  PlatformUtil.hpp  ProfileHelper.hpp  ScriptInfo.hpp  StringUtil.hpp  YamlLib.hpp  runcpp2.hpp
Include/runcpp2/Data/: BuildType.hpp  BuildTypeHelper.hpp  CmdOptions.hpp  CompilerInfo.hpp  CompilerProfile.hpp  DependencyCommands.hpp  DependencyInfo.hpp  DependencyLibraryType.hpp  DependencyLinkProperty.hpp  DependencySearchProperty.hpp  DependencySetup.hpp  DependencySource.hpp  DependencySourceType.hpp  FileProperties.hpp  FilesToCopyInfo.hpp  FilesTypesInfo.hpp  FlagsOverrideInfo.hpp  GitSource.hpp  LinkerInfo.hpp  LocalSource.hpp  ParseCommon.hpp  Profile.hpp  ProfilesCommands.hpp  ProfilesCompilesFiles.hpp  ProfilesDefines.hpp  ProfilesFlagsOverride.hpp  ProfilesProcessPaths.hpp  ScriptInfo.hpp  StageInfo.hpp
Src/Tests/: BuildsManagerTest.cpp  CMakeLists.txt  ConfigParsingTest.cpp  IncludeManagerTest.cpp  RunAllTests.bat  RunAllTests.sh
Src/Tests/BuildsManager/: MockComponents.hpp  UndefMocks.hpp
Src/Tests/ConfigParsing/: UndefMocks.hpp
Src/Tests/Data/: BuildTypeTest.cpp  DependencyCommandsTest.cpp  DependencyInfoTest.cpp  DependencyLinkPropertyTest.cpp  DependencySourceTest.cpp  FilePropertiesTest.cpp  FilesToCopyInfoTest.cpp  FilesTypesInfoTest.cpp  FlagsOverrideInfoTest.cpp  ProfileTest.cpp  ProfilesCommandsTest.cpp  ProfilesCompilesFilesTest.cpp  ProfilesDefinesTest.cpp  ProfilesFlagsOverrideTest.cpp  ProfilesProcessPathsTest.cpp  ScriptInfoTest.cpp  StageInfoTest.cpp
Src/Tests/IncludeManager/: MockComponents.hpp  UndefMocks.hpp
Src/UnitTests/: BuildsManagerTest.cpp
Src/runcpp2/: BuildsManager.cpp  BuildsManager.hpp  CompilerInfo.cpp  CompilerProfile.cpp  CompilerProfileHelper.cpp  CompilingLinking.cpp  CompilingLinking.hpp  ConfigParsing.cpp  ConfigParsing.hpp  DefaultYAMLs.c  DeferUtil.hpp  DependenciesHelper.cpp  DependenciesHelper.hpp  DependenciesSetupHelper.cpp  DependencyInfo.cpp  DependencySource.cpp  FlagsOverrideInfo.cpp  IncludeManager.cpp  IncludeManager.hpp  LibYAML_Wrapper.cpp  LibYAML_Wrapper.hpp  LibYamlImpl.cpp  LinkerInfo.cpp  MacroUtil.hpp  ParseUtil.cpp  ParseUtil.hpp  PipelineSteps.cpp  PipelineSteps.hpp  PlatformUtil.cpp  ProfileHelper.cpp  ProfileHelper.hpp  ScriptInfo.cpp  StringUtil.cpp  main.cpp  runcpp2.cpp  runcpp2.hpp
Src/runcpp2/Data/: BuildTypeHelper.cpp  BuildTypeHelper.hpp  CmdOptions.hpp  CompilerInfo.cpp  CompilerProfile.cpp  DependencyCommands.cpp  DependencyInfo.cpp  DependencyLibraryType.hpp  DependencyLinkProperty.cpp  DependencySearchProperty.cpp  DependencySetup.cpp  DependencySource.cpp  FileProperties.cpp  FilesToCopyInfo.cpp  FilesToCopyInfo.hpp  FilesTypesInfo.cpp  FilesTypesInfo.hpp  FlagsOverrideInfo.cpp  FlagsOverrideInfo.hpp  GitSource.cpp  GitSource.hpp  LinkerInfo.cpp  LocalSource.cpp  ParameterValue.hpp  ParseCommon.hpp  PipelineResult.hpp  Profile.cpp  Profile.hpp  ProfilesCommands.cpp  ProfilesCommands.hpp  ProfilesCompilesFiles.cpp  ProfilesDefines.cpp  ProfilesDefines.hpp  ProfilesFlagsOverride.cpp  ProfilesFlagsOverride.hpp  (+7 more)
Tests/: Simple.cpp  Test.cpp  TestLocalDependency.cpp  TestSeparateYaml.cpp  TestSeparateYaml.yaml  TestStatic.cpp  YamlMissingSource.yaml  YamlOnlyTest.yaml  test.cpp
Tests/OtherSources/: AnotherSourceFileGcc.cpp  AnotherSourceFileMSVC.cpp
latest/: 404.html  extra.css  index.html  sitemap.xml
latest/TODO/: index.html
latest/build_settings/: index.html
latest/program_manual/: index.html
latest/search/: search_index.json
latest/user_config/: index.html
mkdocs/: mkdocs.yml
mkdocs/docs/: TODO.md  build_settings.md  extra.css  index.md  program_manual.md  user_config.md
v0.2.0/: 404.html  index.html  sitemap.xml
v0.2.0/build_settings/: index.html
v0.2.0/program_manual/: index.html
v0.2.0/user_config/: index.html
v0.3.0/: 404.html  index.html  sitemap.xml
v0.3.0/TODO/: index.html
v0.3.0/build_settings/: index.html
v0.3.0/program_manual/: index.html
v0.3.0/search/: search_index.json
v0.3.0/user_config/: index.html
(+18 files in other folders)
